templates/d.vazquezm.2021_helm_template.yaml
---
# Source: d.vazquezm.2021_helm/templates/external-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: release-name-externalservice-service
  labels:
    app: release-name-externalservice
spec:
  ports:
  - name: release-name-externalservice-port
    protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    app: release-name-externalservice
  type: ClusterIP
---
# Source: d.vazquezm.2021_helm/templates/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mongodb-service
  labels:
    app: release-name-mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: release-name-mongodb-port-27017
  - port: 27018
    targetPort: 27018
    protocol: TCP
    name: release-name-mongodb-port-27018
  - port: 27019
    targetPort: 27019
    protocol: TCP
    name: release-name-mongodb-port-27019
  selector:
    app: release-name-mongodb
  type: ClusterIP
---
# Source: d.vazquezm.2021_helm/templates/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysql-service
  labels:
    app: release-name-mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: release-name-mysql-port
  selector:
    app: release-name-mysql
  type: ClusterIP
---
# Source: d.vazquezm.2021_helm/templates/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: release-name-rabbitmq-service
  labels:
    app: release-name-rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: release-name-rabbitmq-port
  selector:
    app: release-name-rabbitmq
  type: ClusterIP
---
# Source: d.vazquezm.2021_helm/templates/server.yml
apiVersion: v1 
kind: Service
metadata:
  name: release-name-serverservice  
  labels:
    app: release-name-server
spec:
  ports:
  - name: release-name-server-port
    protocol: TCP
    port: 8080
  selector:
    app: release-name-server
  type: ClusterIP
---
# Source: d.vazquezm.2021_helm/templates/external-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-externalservice-deployment
spec:
  selector:
    matchLabels:
      app: release-name-externalservice
  template:
    metadata:
      labels:
        app: release-name-externalservice
    spec:
      securityContext:
        runAsUser: 1001
      containers:
      - name: release-name-externalservice
        image: davidvmar/urjc-davidvmar-external-service:1.0.0
        ports:
          - containerPort: 9090
        securityContext:
          allowPrivilegeEscalation: false
---
# Source: d.vazquezm.2021_helm/templates/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mongodb-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-mongodb
    spec:
      containers:
      - name: release-name-mongodb
        image: mongo:5.0.6-focal
        ports:
        - containerPort: 27017
        - containerPort: 27018
        - containerPort: 27019
        volumeMounts:
        - name: release-name-mongodb-persistent-storage
          mountPath: /data/db
      volumes:
      - name: release-name-mongodb-persistent-storage
        persistentVolumeClaim:
          claimName: release-name-mongodb-pv-claim
---
# Source: d.vazquezm.2021_helm/templates/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mysql-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-mysql
    spec:
      containers:
      - name: release-name-mysql
        image: mysql:8.0.28
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: release-name-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: release-name-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: release-name-mysql-pv-claim
---
# Source: d.vazquezm.2021_helm/templates/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-rabbitmq-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-rabbitmq
    spec:
      containers:
      - name: release-name-rabbitmq
        image: davidvmar/urjc-davidvmar-rabbitmq:1.0.0
        ports:
        - containerPort: 5672
---
# Source: d.vazquezm.2021_helm/templates/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-server-deployment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-server
  replicas: 1      
  template:
    metadata:
      labels:
        app: release-name-server
    spec:
      restartPolicy: Always    
      securityContext:
        runAsUser: 1001
      containers:
      - name: release-name-server
        image: davidvmar/urjc-davidvmar-server:1.0.0
        ports:
          - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
---
# Source: d.vazquezm.2021_helm/templates/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-worker-deployment  
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-worker
  replicas: 1      
  template:
    metadata:
      labels:
        app: release-name-worker
    spec:
      restartPolicy: Always    
      securityContext:
        runAsUser: 1001
      containers:
      - name: release-name-worker
        image: davidvmar/urjc-davidvmar-worker:1.0.1
        command: ["bash"]
        args:
        - "-c"
        - "/usr/bin/wait-for-it.sh release-name-mysql-service:3306 -t 500 -- /usr/bin/wait-for-it.sh release-name-rabbitmq-service:5672 -t 500 -- java -jar p3-worker-0.0.1-SNAPSHOT.jar"        
        securityContext:
            allowPrivilegeEscalation: false
---
# Source: d.vazquezm.2021_helm/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - host: cluster-ip
     http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: release-name-serverservice
            port:
              number: 8080
